# crea-rs

./: .gitignore  Cargo.toml  README.md  build.rs
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/trikzon/omni_rs/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/trikzon/omni_rs/: MainActivity.java  OpenGLRenderer.java  OpenGLView.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/trikzon/omni_rs/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
assets/shaders/: default.glsl  triangle.frag  triangle.vert
crea/: Cargo.toml
crea/lib/gl/: Cargo.toml
crea/lib/gl/src/: lib.rs
crea/src/: lib.rs  window.rs
crean/lib/gl/: build.rs
desktop/: Cargo.toml
desktop/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/platform/: android.rs  desktop.rs
examples/: game.rs  hexagon.rs
examples/assets/: hexagon.glsl
game/: Cargo.toml
game/src/: main.rs
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: debug_bindings.rs  lib.rs
scripts/: android_build.sh
src/: input.rs  lib.rs  main.rs  render.rs  render_gl.rs  resources.rs  shader.rs  vector.rs  window.rs
src/graphics/: buffer.rs  gl.rs  mod.rs  shader.rs  vertex_array.rs  window.rs
src/maths/: matrix.rs  mod.rs  vector.rs
src/platform/: android.rs  desktop.rs
src/render/: buffer.rs  data.rs  display.rs  shader.rs
