[package]
name = "app"
version = "0.1.0"
authors = ["Trikzon <trikzondev@gmail.com>"]
edition = "2018"

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
engine = { path = "engine/" }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.17", default-features = false }
